--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.1.0",
+    "boom": "^2.6.1",
     "hapi": "^8.2.0",
     "hapi-auth-basic": "^2.0.0",
+    "hapi-auth-bearer-simple": "^1.1.3",
+    "jsonwebtoken": "^3.2.2",
     "mongoose": "~3.8.23"
   },
   "description": "A web application written with nodejs for rating melodifestivalen and Eurovision Song Contest.",
