--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api",
+  "name": "song-contest-rater-api",
   "version": "1.0.0",
   "scripts": {
     "start": "node app.js"
@@ -10,20 +10,21 @@
     "hapi": "^8.2.0",
     "hapi-auth-basic": "^2.0.0",
     "hapi-auth-bearer-simple": "^1.1.3",
+    "joi": "^6.0.4",
     "jsonwebtoken": "^3.2.2",
     "mongoose": "~3.8.23"
   },
-  "description": "A web application written with nodejs for rating melodifestivalen and Eurovision Song Contest.",
+  "description": "",
   "main": "app.js",
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/hyperremix/song-contest-rater.git"
+    "url": "https://github.com/hyperremix/song-contest-rater-api.git"
   },
   "author": "Fredrik Pettersson",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/hyperremix/song-contest-rater/issues"
+    "url": "https://github.com/hyperremix/song-contest-rater-api/issues"
   },
-  "homepage": "https://github.com/hyperremix/song-contest-rater"
+  "homepage": "https://github.com/hyperremix/song-contest-rater-api"
 }
